# ProjectTemplate

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  conanfile.txt  cookiecutter.json  mkdocs.yml  poetry.toml  pyproject.toml  readme.md  test.sh
.github/workflows/: cpp_build.yml  python_ci.yml
cmake/: google_deps.cmake  project_warnings.cmake
tests/: test_ProjectTemplate.cpp
{{cookiecutter.project_name}}/: .gitignore  CMakeLists.txt  Makefile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: cpp_build.yml  python_ci.yml
{{cookiecutter.project_name}}/benchmarks/: CMakeLists.txt
{{cookiecutter.project_name}}/cmake/: conan.cmake  google_deps.cmake
{{cookiecutter.project_name}}/docs/: README.md
{{cookiecutter.project_name}}/include/{{cookiecutter.project_name}}/: {{cookiecutter.project_name}}.hpp
{{cookiecutter.project_name}}/include/{{project_name}}/: {{project_name}}.hpp
{{cookiecutter.project_name}}/src/: ProjectTemplate.cpp  {{cookiecutter.project_name}}.cpp
{{cookiecutter.project_name}}/tests/: CMakeLists.txt  test_scripts.py  test_{{cookiecutter.project_name}}.cpp
