[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Package for ProjectTemplate scripts"
authors = ["Brennan Swanton <brennan.swanton@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
